2011-01-21 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-window.c:
	* src/nact/base-window.h (base_window_peek_widget):
	Renamed as base_window_get_widget_from_gtk().

	* src/nact/nact-icon-chooser.c: Updated accordingly.

	* src/nact/base-window.c:
	* src/nact/base-window.h (base_window_get_named_toplevel):
	Renamed as base_window_get_gtk_toplevel_by_name().

	* src/nact/nact-icommand-tab.c: Updated accordingly.

	* src/nact/base-window.c:
	* src/nact/base-window.h (base_window_get_toplevel):
	Renamed as base_window_get_gtk_toplevel().

	* src/nact/base-application.c:
	* src/nact/base-assistant.c:
	* src/nact/base-iprefs.c:
	* src/nact/nact-add-capability-dialog.c:
	* src/nact/nact-add-scheme-dialog.c:
	* src/nact/nact-assistant-export.c:
	* src/nact/nact-assistant-import.c:
	* src/nact/nact-confirm-logout.c:
	* src/nact/nact-export-ask.c:
	* src/nact/nact-gtk-utils.c:
	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-icon-chooser.c:
	* src/nact/nact-ifolders-tab.c:
	* src/nact/nact-main-menubar.c:
	* src/nact/nact-main-window.c:
	* src/nact/nact-match-list.c:
	* src/nact/nact-preferences-editor.c:
	* src/nact/nact-tree-model-dnd.c: Updated accordingly.

	* src/nact/base-window.c:
	* src/nact/base-window.h: Rename signal defines.

	* src/nact/base-assistant.c:
	* src/nact/nact-add-capability-dialog.c:
	* src/nact/nact-add-scheme-dialog.c:
	* src/nact/nact-assistant-export.c:
	* src/nact/nact-assistant-import.c:
	* src/nact/nact-confirm-logout.c:
	* src/nact/nact-export-ask.c:
	* src/nact/nact-icon-chooser.c:
	* src/nact/nact-main-window.c:
	* src/nact/nact-preferences-editor.c: Updated accordingly.

	* src/nact/base-window.c:
	* src/nact/base-window.h:
	Remove unused properties.
	(base_window_error_dlg, base_window_yesno_dlg): Removed functions.

	* src/nact/base-assistant.c:
	* src/nact/nact-main-menubar-edit.c:
	* src/nact/nact-main-menubar-file.c:
	* src/nact/nact-main-window.c
	* src/nact/nact-window.c: Updated accordingly.
