@@ -1,3 +1,11 @@
+2011-01-22 Pierre Wieser <pwieser@trychlos.org>
+
+	* src/nact/base-builder.c:
+	* src/nact/base-builder.h (base_builder_load_named_toplevel):
+	Renamed as base_builder_get_toplevel_by_name().
+
+	* src/nact/base-window.c: Updated accordingly.
+
 2011-01-21 Pierre Wieser <pwieser@trychlos.org>
 
 	* src/nact/base-window.c:
